# ruuvi-home

./: .gitignore  pyproject.toml  tasks.py
src/: add_sensors.py  db_connection.py  index.py  initialize_db.py  log_sensor_readings.py
src/entities/: sensor.py  sensor_reading.py
src/repositories/: sensor_reading_repository.py  sensor_repository.py
src/services/: sensor_service.py
