[tool.poetry]
name = "ruuvi-home"
version = "0.1.0"
description = ""
authors = ["Olli Ulmala <ulmala.olli@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ruuvitag-sensor = "^2.0.0"
invoke = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
